--- a/presentation/src/main/res/layout/base_view_pager2.xml
+++ b/presentation/src/main/res/layout/base_view_pager2.xml
@@ -16,7 +16,7 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/detail_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="535dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
