--- a/presentation/src/main/res/layout/fragment_article.xml
+++ b/presentation/src/main/res/layout/fragment_article.xml
@@ -10,13 +10,13 @@
             type="kr.foorun.uni_eat.feature.article.ArticleViewModel" />
     </data>
 
-    <kr.foorun.uni_eat.base.view.base.BaseBarConstraintView
+    <kr.foorun.uni_eat.base.view.base.base_layout.BaseBarConstraintView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:titleText="@string/article"
         tools:context="kr.foorun.uni_eat.feature.article.ArticleFragment">
 
-        <kr.foorun.uni_eat.base.view.base.BaseTextView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
             android:id="@+id/explain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
-        <kr.foorun.uni_eat.base.view.base.BaseImageView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/hand"
@@ -51,5 +51,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/explain" />
-    </kr.foorun.uni_eat.base.view.base.BaseBarConstraintView>
+    </kr.foorun.uni_eat.base.view.base.base_layout.BaseBarConstraintView>
 </layout>
