--- a/presentation/src/main/res/layout/base_bar_constraint.xml
+++ b/presentation/src/main/res/layout/base_bar_constraint.xml
@@ -37,7 +37,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
 
-                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
                     android:id="@+id/front_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -54,14 +54,14 @@
                 app:layout_constraintStart_toEndOf="@id/front_image_frame"
                 app:layout_constraintTop_toTopOf="parent" >
 
-                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
                     android:id="@+id/bar_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
             </FrameLayout>
 
-            <kr.foorun.uni_eat.base.view.base.BaseTextView
+            <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
                 android:id="@+id/bar_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
 
-                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
                     android:id="@+id/rear_image"
                     android:layout_width="23dp"
                     android:layout_height="23dp" />
