--- a/presentation/src/main/res/layout/base_constraint.xml
+++ b/presentation/src/main/res/layout/base_constraint.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <kr.foorun.uni_eat.base.view.base.BaseImageView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
             android:id="@+id/back_button"
             android:layout_width="18dp"
             android:layout_height="24dp"
