--- a/presentation/src/main/res/layout/base_edittext.xml
+++ b/presentation/src/main/res/layout/base_edittext.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <kr.foorun.uni_eat.base.view.base.BaseEditTextView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseEditTextView
             android:id="@+id/base_edittext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
