--- a/presentation/src/main/res/layout/fragment_event.xml
+++ b/presentation/src/main/res/layout/fragment_event.xml
@@ -27,7 +27,7 @@
                 android:background="@color/white"
                 tools:context=".feature.event.EventFragment">
 
-                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
                     android:id="@+id/typo_TV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -53,7 +53,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
-                    <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
                         android:id="@+id/event_filter_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -61,7 +61,7 @@
                         android:textColor="@color/small_text"
                         android:textSize="13sp" />
 
-                    <kr.foorun.uni_eat.base.view.base.BaseImageView
+                    <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
