--- a/presentation/src/main/res/layout/fragment_event_detail.xml
+++ b/presentation/src/main/res/layout/fragment_event_detail.xml
@@ -14,13 +14,13 @@
         android:background="@color/white"
         tools:context="kr.foorun.uni_eat.feature.event.event_detail.EventDetailFragment">
 
-       <kr.foorun.uni_eat.base.view.base.BaseBarConstraintView
+       <kr.foorun.uni_eat.base.view.base.base_layout.BaseBarConstraintView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/article"
            app:layout_constraintTop_toTopOf="parent"/>
 
-        <kr.foorun.uni_eat.base.view.base.BaseTextView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
             android:id="@+id/event_detail_TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
