--- a/presentation/src/main/res/layout/fragment_event_sort_bottom_sheet.xml
+++ b/presentation/src/main/res/layout/fragment_event_sort_bottom_sheet.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical"
         tools:context=".feature.event.bottom_sheet.fragment.EventSortBottomSheetFragment">
 
-        <kr.foorun.uni_eat.base.view.base.BaseTextView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
             android:id="@+id/sort_latest_TV"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -27,7 +27,7 @@
             android:textColor="@color/small_text"
             android:textSize="15sp" />
 
-        <kr.foorun.uni_eat.base.view.base.BaseTextView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
             android:id="@+id/sort_deadline_TV"
             android:layout_width="match_parent"
             android:layout_height="40dp"
