--- a/presentation/src/main/res/layout/fragment_shop_bottom_sheet.xml
+++ b/presentation/src/main/res/layout/fragment_shop_bottom_sheet.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
                     android:id="@+id/back_button"
                     android:onClick="@{() -> viewModel.backClicked()}"
                     android:layout_width="32dp"
