--- a/presentation/src/main/res/layout/fragment_splash.xml
+++ b/presentation/src/main/res/layout/fragment_splash.xml
@@ -9,7 +9,7 @@
         android:background="@color/red"
         tools:context=".feature.splash.SplashFragment">
 
-        <kr.foorun.uni_eat.base.view.base.BaseImageView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
             android:id="@+id/splash_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
