--- a/presentation/src/main/res/layout/item_menu.xml
+++ b/presentation/src/main/res/layout/item_menu.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <kr.foorun.uni_eat.base.view.base.BaseTextView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
             android:id="@+id/menu_text"
             android:text="@{menu}"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:textSize="15sp" />
 
-        <kr.foorun.uni_eat.base.view.base.BaseImageView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/gray_line"
@@ -34,7 +34,7 @@
             app:layout_constraintStart_toEndOf="@id/menu_text"
             app:layout_constraintEnd_toStartOf="@id/menu_price_text"/>
 
-        <kr.foorun.uni_eat.base.view.base.BaseTextView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
             android:id="@+id/menu_price_text"
             android:text="@{price}"
             app:layout_constraintEnd_toEndOf="parent"
