--- a/presentation/src/main/res/layout/item_search_tag.xml
+++ b/presentation/src/main/res/layout/item_search_tag.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="38dp">
 
-        <kr.foorun.uni_eat.base.view.base.BaseTextView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
