--- a/presentation/src/main/res/layout/item_shop_image.xml
+++ b/presentation/src/main/res/layout/item_shop_image.xml
@@ -19,7 +19,7 @@
         android:layout_width="103dp"
         android:layout_height="103dp">
 
-        <kr.foorun.uni_eat.base.view.base.BaseImageView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
             android:id="@+id/shop_image"
             app:glide="@{article.shopImages[0]}"
             android:layout_width="match_parent"
