--- a/presentation/src/main/res/layout/item_tab_item.xml
+++ b/presentation/src/main/res/layout/item_tab_item.xml
@@ -29,7 +29,7 @@
             android:textColor="@color/black"
             tools:text="@{title}"/>
 
-        <kr.foorun.uni_eat.base.view.base.BaseTextView
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
             android:id="@+id/tab_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
